# Probe

./: .gitignore  README.md  README_EN.md  build.sh
.github/workflows/: release.yml
docs/: architecture.md  frontend.md  jsonl-field-taxonomy-claude-code.md  jsonl-field-taxonomy.md  tauri-backend.md
engine/: probe.spec  pyproject.toml  server.py
engine/probe/: path_utils.py  platform_registry.py
engine/probe/claude_code_adapter/: __init__.py  parser.py  reader.py
engine/probe/codex_adapter/: __init__.py  classifier.py  extractors.py  models.py  reader.py  summary.py  token_estimator.py  writer.py
engine/probe/handlers/: import_handler.py  scan_handler.py  session_handler.py  settings_handler.py
engine/probe/storage/: __init__.py  connection.py  event_dao.py  import_dao.py  imported_files_dao.py  rule_result_dao.py  schema.py  session_dao.py  settings_dao.py
engine/tests/: conftest.py  test_server_stdio.py
engine/tests/handlers/: test_scan_and_import.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: samples
frontend/src/: App.tsx  dev-mock.ts  index.css  main.tsx
scripts/: dev-update-server.sh  dev-updater-smoke.sh  dev-windows.ps1  generate-updater-json.mjs  sync-version.mjs
tauri/: Cargo.toml  tauri.conf.json  tauri.dev-updater.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: lib.rs  main.rs
tauri/src/commands/: app_state.rs  engine_call.rs  error.rs  file_dialog.rs  mod.rs  read_raw_file.rs
tauri/src/sidecar/: mod.rs  process.rs  transport.rs
(+74 files in other folders)
