[package]
name = "probe"
version = "0.0.4"
edition = "2021"

[lib]
name = "probe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "probe"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync"] }
thiserror = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
